# C_Percent_Language

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.GPL3  README.md  build.bat  build.sh  output.cpp  test.py
cpct-core/src/: ast.h  lexer.cpp  preprocessor.h
cpct-cpp-lib/: sources.txt
cpct-cpp-lib/cpct/: io.h  platform.h
cpct-cpp-lib/cpct/data/structure/: array.h  dict.h  map.h  vector.h
cpct-cpp-lib/cpct/data/type/: char.h  int.h  int_fixed.h  intbig.h  string.h
cpct-interpreter/: .gitignore
cpct-interpreter/src/: ast.h  bigint.cpp  bigint.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.h
cpct-jit/src/: cling_repl.cpp
cpct-transpiler/: .gitignore
cpct-transpiler/compiler/src/: main.cpp
cpct-transpiler/include/cpct/: types.h
cpct-transpiler/include/cpct/data/: compare.h  math.h
cpct-transpiler/include/cpct/data/structure/: dict.h
cpct-transpiler/include/cpct/data/type/: bigint.cpp  bigint.h  bool.h  char.h  float.h  int.h  int_fixed.h  string.h
cpct-transpiler/include/cpct/io/: console.h
cpct-transpiler/jit/src/: cling_repl.cpp  jit_repl.cpp
cpct-transpiler/src/: analyzer.h  compiler.h  main.cpp  translator.h
cpct-transpiler/translator/src/: analyzer.h  main.cpp  translator.h
cpct-vscode/: language-configuration.json  package.json
cpct-vscode/syntaxes/: cpct.tmLanguage.json
docs/: datastructure.md  datatype.md  diff_from_cpp.md  operators.md  syntax.md
docs/builtin/: algorithm.md  datatype.md  fstream.md  iostream.md  math.md
docs_dev/: README.md  TODO.md  internals.md  spec_vs_interpreter.md
examples/: test_keywords.cpc  test_reference.cpc  test_string_methods.cpc
examples/_tests/: test_array_param.cpc  test_bitwise.cpc  test_define.cpc  test_fast_types.cpc  test_main.cpc
examples/basic/: hello.cpc  operators.cpc  variables.cpc
examples/builtin/: conversion.cpc  math.cpc  sort.cpc
examples/control/: functions.cpc  if_else.cpc  loops.cpc  switch.cpc
examples/datastructure/: array.cpc  dict.cpc  map.cpc  vector.cpc
examples/types/: bigint_test.cpc  char_test.cpc  float_types.cpc  int_types.cpc  string_test.cpc
src/: main.cpp
src/compile/: compiler.h  main.cpp
src/core/: parser.h  version.h
src/jit/: main.cpp  repl.h
src/lib/cpct/: types.h
src/lib/cpct/data/: cast.h  format.h  math.h
src/lib/cpct/data/type/: bigint.cpp  intbig.h  overflow.h  string.h
src/translate/: analyzer.h  main.cpp  translator.h
tests/: test_cast.cpp  test_ds.cpp  test_find.cpp  test_format.cpp  test_intbig.cpp  test_io.cpp  test_map_sort.cpp  test_math.cpp  test_sort.cpp  test_types.cpp
